--- a/hdi/warehouse_map/views/warehouse_map_views.xml
+++ b/hdi/warehouse_map/views/warehouse_map_views.xml
@@ -79,7 +79,7 @@
                 <field name="name"/>
                 <field name="warehouse_id"/>
                 <templates>
-                    <t t-name="kanban-box">
+                    <t t-name="card">
                         <div class="oe_kanban_global_click">
                             <div class="o_kanban_record_top">
                                 <div class="o_kanban_record_headings">
