--- a/hdi/warehouse_map/views/stock_location_views.xml
+++ b/hdi/warehouse_map/views/stock_location_views.xml
@@ -35,4 +35,24 @@
             </xpath>
         </field>
     </record>
+
+    <!-- Extend form view của stock.move.line để thêm trường vị trí kho -->
+    <record id="view_stock_move_line_form_inherit" model="ir.ui.view">
+        <field name="name">stock.move.line.form.warehouse.map</field>
+        <field name="model">stock.move.line</field>
+        <field name="inherit_id" ref="stock.view_stock_move_line_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='location_dest_id']" position="after">
+                <group string="Vị trí trên sơ đồ kho" name="map_position" colspan="2">
+                    <group>
+                        <field name="posx"/>
+                        <field name="posy"/>
+                    </group>
+                    <group>
+                        <field name="posz"/>
+                    </group>
+                </group>
+            </xpath>
+        </field>
+    </record>
 </odoo>
