--- a/hdi/warehouse_map/views/stock_picking_views.xml
+++ b/hdi/warehouse_map/views/stock_picking_views.xml
@@ -6,14 +6,14 @@
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
-            <!-- Thêm nút vào header cho phiếu nhập kho -->
-            <xpath expr="//button[@name='button_validate']" position="before">
-                <button name="action_open_wizard_assign_positions" 
+            <!-- Thêm nút gán vị trí sau button validate -->
+            <xpath expr="//button[@name='button_validate']" position="after">
+                <button name="action_assign_warehouse_map_position" 
                         type="object" 
-                        string="🏢 Gán vị trí" 
+                        string="↪ Gán vị trí sơ đồ" 
                         class="btn-info"
-                        invisible="picking_type_code != 'incoming' or state not in ['assigned', 'waiting']"
-                        help="Gán vị trí sản phẩm/Lot từ sơ đồ kho"/>
+                        invisible="picking_type_code != 'incoming' or state == 'done'"
+                        help="Gán vị trí sản phẩm/Lot từ sơ đồ kho trước khi xác nhận"/>
             </xpath>
         </field>
     </record>
