--- a/hdi/warehouse_map/wizard/move_line_warehouse_map_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/move_line_warehouse_map_wizard_views.xml
@@ -12,12 +12,12 @@
                     
                     <group>
                         <group>
-                            <field name="product_id"/>
-                            <field name="lot_id"/>
+                            <field name="product_id" readonly="1"/>
+                            <field name="lot_id" domain="[('product_id', '=', product_id)]"/>
                         </group>
                         <group>
-                            <field name="quantity"/>
-                            <field name="location_dest_id"/>
+                            <field name="quantity" readonly="1"/>
+                            <field name="location_dest_id" readonly="1"/>
                         </group>
                     </group>
                     
