--- a/hdi/warehouse_map/wizard/move_line_warehouse_map_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/move_line_warehouse_map_wizard_views.xml
@@ -13,7 +13,7 @@
                     <group>
                         <group>
                             <field name="product_id" readonly="1"/>
-                            <field name="lot_id" domain="[('product_id', '=', product_id)]"/>
+                            <field name="lot_id" required="1"/>
                         </group>
                         <group>
                             <field name="quantity" readonly="1"/>
