--- a/hdi/warehouse_map/views/stock_picking_views.xml
+++ b/hdi/warehouse_map/views/stock_picking_views.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Override stock.picking form để thêm nút gán vị trí và lot column -->
+    <!-- Override stock.picking form để thêm nút gán vị trí -->
     <record id="view_picking_form_warehouse_map" model="ir.ui.view">
         <field name="name">stock.picking.form.warehouse.map</field>
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
-            <!-- Thêm lot_id field vào bảng move_line nếu chưa có -->
-            <xpath expr="//field[@name='move_line_ids']//field[@name='product_id']" position="after">
-                <field name="lot_id"/>
-            </xpath>
-            
             <!-- Thêm nút gán vị trí sau button validate -->
             <xpath expr="//button[@name='button_validate']" position="after">
                 <button name="action_assign_warehouse_map_position" 
