--- a/hdi/warehouse_map/wizard/move_line_warehouse_map_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/move_line_warehouse_map_wizard_views.xml
@@ -13,7 +13,8 @@
                     <group>
                         <group>
                             <field name="product_id" readonly="1"/>
-                            <field name="lot_id" readonly="1"/>
+                            <field name="lot_name" readonly="1"/>
+                            <field name="lot_id" options="{'no_create': True}" invisible="lot_name"/>
                         </group>
                         <group>
                             <field name="quantity" readonly="1"/>
