--- a/hdi/warehouse_map/views/menu_views.xml
+++ b/hdi/warehouse_map/views/menu_views.xml
@@ -6,8 +6,14 @@
               sequence="10"/>
 
     <menuitem id="menu_warehouse_map"
-              name="Sơ đồ kho"
+              name="Sơ đồ kho 2D"
               parent="menu_warehouse_map_root"
               action="action_warehouse_map"
               sequence="1"/>
+
+    <menuitem id="menu_warehouse_map_3d"
+              name="Sơ đồ kho 3D"
+              parent="menu_warehouse_map_root"
+              action="action_warehouse_map_3d"
+              sequence="2"/>
 </odoo>
