--- a/hdi/warehouse_map/wizard/stock_lot_serial_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/stock_lot_serial_wizard_views.xml
@@ -11,27 +11,38 @@
                     <field name="total_serials" readonly="1"/>
                 </group>
                 
-                <separator string="Chọn Lot"/>
+                <separator string="🔍 QUÉT BARCODE SERIAL"/>
+                <group>
+                    <field name="barcode_input" placeholder="Quét barcode sản phẩm..." autofocus="autofocus"/>
+                    <field name="scanned_count" readonly="1"/>
+                </group>
+                
+                <separator string="SERIAL ĐÃ QUÉT"/>
+                <field name="scanned_serial_ids" nolabel="1">
+                    <tree>
+                        <field name="product_code" readonly="1"/>
+                        <field name="serial_number" readonly="1"/>
+                    </tree>
+                </field>
+                
+                <separator string="CHỌN LOT"/>
                 <group>
                     <field name="lot_create_option" widget="radio"/>
                 </group>
                 
                 <!-- Option 1: Tạo lot mới -->
                 <group invisible="lot_create_option != 'create_new'">
-                    <field name="lot_name" placeholder="VD: LOT20260127001" required="1"/>
-                    <field name="lot_barcode" placeholder="VD: LOT-20260127-001" required="0"/>
+                    <field name="lot_name" placeholder="VD: LOT20260127001"/>
+                    <field name="lot_barcode" placeholder="VD: LOT-20260127-001"/>
                 </group>
                 
                 <!-- Option 2: Chọn lot đã tạo -->
                 <group invisible="lot_create_option != 'select_existing'">
-                    <field name="existing_lot_id" required="1"/>
+                    <field name="existing_lot_id"/>
                 </group>
                 
-                <separator string="Serial được gom vào"/>
-                <field name="move_line_ids" nolabel="1" widget="many2many_tags"/>
-                
                 <footer>
-                    <button name="action_confirm_assign_serials" string="Gom Serial vào Lot" type="object" class="btn-primary"/>
+                    <button name="action_confirm_assign_serials" string="✓ Gom Serial vào Lot" type="object" class="btn-primary"/>
                     <button string="Hủy" class="btn-default" special="cancel"/>
                 </footer>
             </form>
