--- a/hdi/warehouse_map/wizard/stock_lot_serial_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/stock_lot_serial_wizard_views.xml
@@ -7,17 +7,43 @@
             <form string="Gom Serial vào Lot">
                 <group>
                     <field name="picking_id" readonly="1"/>
-                    <field name="product_id" readonly="1" invisible="1"/>
+                    <field name="product_id" nolabel="1"/>
                     <field name="total_serials" readonly="1"/>
                 </group>
                 
                 <separator string="NHẬP SERIAL CHO TỪNG SẢN PHẨM"/>
                 <field name="wizard_move_line_ids" nolabel="1">
                     <list editable="bottom">
-                        <field name="product_id" readonly="1"/>
+                        <field name="product_name" readonly="1"/>
                         <field name="serial_number" placeholder="Quét barcode hoặc nhập serial..."/>
                     </list>
                 </field>
+                
+                <footer>
+                    <button name="action_confirm_serials" string="✓ Xác nhận" type="object" class="btn-primary"/>
+                    <button string="Hủy" class="btn-default" special="cancel"/>
+                </footer>
+            </form>
+        </field>
+    </record>
+    
+    <act_window id="action_stock_lot_serial_wizard" 
+        name="Gom Serial vào Lot"
+        res_model="stock.lot.serial.wizard"
+        view_mode="form"
+        target="new"
+        binding_model="stock.picking"/>
+    
+    <!-- View cho Wizard Chọn Lot (Bước 2) -->
+    <record id="view_stock_lot_selection_wizard_form" model="ir.ui.view">
+        <field name="name">stock.lot.selection.wizard.form</field>
+        <field name="model">stock.lot.selection.wizard</field>
+        <field name="arch" type="xml">
+            <form string="Chọn Lot">
+                <group>
+                    <field name="picking_id" readonly="1"/>
+                    <field name="product_id" readonly="1"/>
+                </group>
                 
                 <separator string="CHỌN LOT"/>
                 <group>
@@ -42,11 +68,4 @@
             </form>
         </field>
     </record>
-    
-    <act_window id="action_stock_lot_serial_wizard" 
-        name="Gom Serial vào Lot"
-        res_model="stock.lot.serial.wizard"
-        view_mode="form"
-        target="new"
-        binding_model="stock.picking"/>
 </odoo>
